--- a/likes/index.html
+++ b/likes/index.html
@@ -64,6 +64,10 @@
 <a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Play_It_as_It_Lays" class="nounderline">Play it as it Lays</a><br><br>
 <a href="https://www.minibarbyjoseandres.com/" class="nounderline">Barmini</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Dreaming_(Blondie_song)" class="nounderline">Dreaming by Blondie</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon Serrano</a><br><br>
+
 <a href="https://www.audiusa.com/en/models/a5/s5-cabriolet/2024/overview/" class="nounderline">Audi S5 convertible</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Black_Mirror" class="nounderline">Black Mirror</a><br><br>
 <a href="https://onewheel.com/" class="nounderline">Onewheel</a><br><br>
@@ -87,7 +91,7 @@
 <a href="https://en.wikipedia.org/wiki/Thelma_%26_Louise" class="nounderline">Thelma & Louise</a><br><br>
 <a href="https://en.wikipedia.org/wiki/John_Lennon" class="nounderline">John Lennon</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Weapon_Shops_of_Isher" class="nounderline">The Weapon Shops of Isher</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Dei%C3%A0" class="nounderline">Deia, Mallorca</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Dei%C3%A0" class="nounderline">Deia&grave;, Mallorca</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Different_People" class="nounderline">Different People by No Doubt</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Cryin%27" class="nounderline">Cryin' by Aerosmith</a><br><br>
 <a href="https://www.goodreads.com/book/show/941146.The_Embedding" class="nounderline">The Embedding</a><br><br>
@@ -113,7 +117,7 @@
 <a href="https://en.wikipedia.org/wiki/Contempt_(film)" class="nounderline">Contempt</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Sunken_Diamond" class="nounderline">Stanford Baseball, Klein Field</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Voynich_manuscript" class="nounderline">Voynich manuscript</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Serve_the_People!_(book)" class="nounderline">Serve the People!</a><br><br>
+<a href="https://www.goodreads.com/book/show/2077363.Serve_the_People_" class="nounderline">Serve the People!</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Japanese_Breakfast" class="nounderline">Head Over Heels by Japanese Breakfast</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Florida_Project" class="nounderline">The Florida Project</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Convenience_Store_Woman" class="nounderline">Convenience Store Woman</a><br><br>
