--- a/math/articles.html
+++ b/math/articles.html
@@ -28,6 +28,10 @@
       <a href="https://hal.science/hal-04080486v1/document" class="article-card">
         A Small Collatz Rule without the Plus One &nbsp;•&nbsp; PDF
       </a>
+
+      <a href="https://oeis.org/A383041" class="article-card">
+        OEIS Integer Sequence A383041 &nbsp;•&nbsp; Sequence
+      </a>
     </div>
   </main>
 
