--- a/newindex.html
+++ b/newindex.html
@@ -51,7 +51,6 @@
  "was once in an elevator with a celebrity",
  "plays the monkey jump",
  "usually opens with f3",
- "331 - 1,210,483 - 45,661,129 - 107,889,071",
  "has that dream where you're late for the test",
  "sees patterns where there literally aren't any",
  "needs a haircut",
@@ -77,7 +76,32 @@
  "gets pulled over",
  "has half a brain",
  "no time to explain",
- "is easily amused" ];
+ "is thinking of a number",
+  "is definitely ready for shots",
+  "veni, vidi",
+  "voted for the other one",
+  "drives you forcibly to happiness",
+  "can't quite seem to reach it",
+  "gets stuck now and then",
+  "hates to judge",
+  "gets the news on sunday",
+  "minimal drama",
+  "needs a new backpack",
+  "serves the people",
+  "what, me worry",
+  "what day is it again",
+  "does mathematics in pen",
+  "rat compatible",
+  "thinks you're cool",
+  "has one favorite jacket",
+  "let's don't and say we did",
+  "can imagine quite a bit",
+  "nice place you got here, mr. pike",
+  "here comes your man",
+  "has no problem with that",
+  "has a double tooth",
+  "is laser-focused on delight",
+  "is easily amused" ];
 
   // 2) Pick one at random
   const pick = statuses[Math.floor(Math.random() * statuses.length)];
