--- a/fiction/books.html
+++ b/fiction/books.html
@@ -24,7 +24,7 @@
       <a href="https://a.co/d/cEMLfuF" class="thumb">
         <figure>
           <img src="animales-cover.png" alt="Animales">
-          <figcaption>for little kids</figcaption>   
+          <figcaption>for little kids (2024)</figcaption>   
         </figure>
       </a>
       <br>
@@ -32,7 +32,16 @@
       <a href="books.html" class="thumb">
         <figure>
           <img src="empire-cover.jpg" alt="Empire of Liberty">
-          <figcaption>for big kids</figcaption>   
+          <figcaption>for big kids (2026)</figcaption>   
+        </figure>
+      </a>
+      <br>
+    </div>
+
+      <a href="books.html" class="thumb">
+        <figure>
+          <img src="knight-book.gif" alt="Artificial Intelligence">
+          <figcaption>deprecated! (1992)</figcaption>   
         </figure>
       </a>
       <br>
