--- a/likes/index.html
+++ b/likes/index.html
@@ -66,7 +66,7 @@
 <a href="https://www.minibarbyjoseandres.com/" class="nounderline">Barmini</a><br><br>
 
 <a href="https://en.wikipedia.org/wiki/Dreaming_(Blondie_song)" class="nounderline">Dreaming by Blondie</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon Serrano</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Jam%C3%B3n" class="nounderline">Jamon serrano</a><br><br>
 
 <a href="https://www.audiusa.com/en/models/a5/s5-cabriolet/2024/overview/" class="nounderline">Audi S5 convertible</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Black_Mirror" class="nounderline">Black Mirror</a><br><br>
@@ -91,7 +91,7 @@
 <a href="https://en.wikipedia.org/wiki/Thelma_%26_Louise" class="nounderline">Thelma & Louise</a><br><br>
 <a href="https://en.wikipedia.org/wiki/John_Lennon" class="nounderline">John Lennon</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Weapon_Shops_of_Isher" class="nounderline">The Weapon Shops of Isher</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Dei%C3%A0" class="nounderline">Deia&grave;, Mallorca</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Dei%C3%A0" class="nounderline">Deia, Mallorca</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Different_People" class="nounderline">Different People by No Doubt</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Cryin%27" class="nounderline">Cryin' by Aerosmith</a><br><br>
 <a href="https://www.goodreads.com/book/show/941146.The_Embedding" class="nounderline">The Embedding</a><br><br>
