--- a/math/articles.html
+++ b/math/articles.html
@@ -22,15 +22,15 @@
   <main>
     <div class="article-list">
       <a href="https://hal.science/hal-04261183v1/document" class="article-card">
-        Collatz High Cycles Do Not Exist &nbsp;•&nbsp; PDF
+        Collatz High Cycles Do Not Exist (2023) &nbsp;•&nbsp; PDF
       </a>
       
       <a href="https://hal.science/hal-04080486v1/document" class="article-card">
-        A Small Collatz Rule without the Plus One &nbsp;•&nbsp; PDF
+        A Small Collatz Rule without the Plus One (2023) &nbsp;•&nbsp; PDF
       </a>
 
       <a href="https://oeis.org/A383041" class="article-card">
-        OEIS Integer Sequence A383041 &nbsp;•&nbsp; Sequence
+        OEIS Integer Sequence A383041 (2025) &nbsp;•&nbsp; page
       </a>
     </div>
   </main>
