--- a/math/videos.html
+++ b/math/videos.html
@@ -34,7 +34,7 @@
       <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE" class="thumb">
         <figure>
           <img src="mathkook-playlist.png" alt="Collatz playlist">
-          <figcaption>Collatz Conjecture Series</figcaption>
+          <figcaption>Collatz (3n+1) Conjecture Series</figcaption>
         </figure>
       </a>
       <br>
@@ -43,7 +43,7 @@
       <a href="https://www.youtube.com/watch?v=TxBRcwkRjmc" class="thumb">
         <figure>
           <img src="mathkook-avoid.png" alt="Avoid the Collatz video">
-          <figcaption>Avoid the Collatz Conjecture!</figcaption>
+          <figcaption>Self-Contained Collatz Talk</figcaption>
         </figure>
       </a>
     </div>
