--- a/newindex.html
+++ b/newindex.html
@@ -67,7 +67,7 @@
  "might or might not",
  "is unsupervised",
  "is unprepared for the jump scare",
- "is still on the payroll",
+ "are we still on the payroll?",
  "anybody seen the cat?",
  "is on the verge",
  "stands corrected",
@@ -101,6 +101,7 @@
   "has no problem with that",
   "has a double tooth",
   "is laser-focused on delight",
+"this looks like a job for me",
   "is easily amused" ];
 
   // 2) Pick one at random
