--- a/writing/books.html
+++ b/writing/books.html
@@ -36,11 +36,10 @@
         </figure>
       </a>
       <br>
-    </div>
 
       <a href="books.html" class="thumb">
         <figure>
-          <img src="knight-book.gif" alt="Artificial Intelligence">
+          <img src="knight-book.jpg" alt="Artificial Intelligence">
           <figcaption>deprecated! (1992)</figcaption>   
         </figure>
       </a>
