--- a/writing/books.html
+++ b/writing/books.html
@@ -37,7 +37,7 @@
       </a>
       <br>
 
-      <a href="books.html" class="thumb">
+      <a href="https://www.amazon.com/dp/0070522634?ref_=cm_sw_r_cp_ud_dp_6A00DXM4P41460PXH0CQ" class="thumb">
         <figure>
           <img src="knight-book.jpg" alt="Artificial Intelligence">
           <figcaption>deprecated! (1992)</figcaption>   
