--- a/newindex.html
+++ b/newindex.html
@@ -54,7 +54,7 @@
  "has that dream where you're late for the test",
  "sees patterns where there literally aren't any",
  "needs a haircut",
- "should apply himself more",
+ "should apply himself",
  "laughs at his own jokes",
  "wants to see you",
  "missed a belt loop",
@@ -93,7 +93,7 @@
   "does mathematics in pen",
   "rat compatible",
   "thinks you're cool",
-  "has one favorite jacket",
+  "has this one favorite jacket",
   "let's don't and say we did",
   "can imagine quite a bit",
   "nice place you got here, mr. pike",
