--- a/writing/books.html
+++ b/writing/books.html
@@ -24,7 +24,7 @@
       <a href="https://a.co/d/cEMLfuF" class="thumb">
         <figure>
           <img src="animales-cover.png" alt="Animales">
-          <figcaption>for little kids (2024)</figcaption>   
+          <figcaption>A bilingual picture book (2024)</figcaption>   
         </figure>
       </a>
       <br>
@@ -32,7 +32,7 @@
       <a href="books.html" class="thumb">
         <figure>
           <img src="empire-cover.jpg" alt="Empire of Liberty">
-          <figcaption>for big kids (2026)</figcaption>   
+          <figcaption>An alternate-history spy novel (2026)</figcaption>   
         </figure>
       </a>
       <br>
@@ -40,7 +40,7 @@
       <a href="https://www.amazon.com/dp/0070522634?ref_=cm_sw_r_cp_ud_dp_6A00DXM4P41460PXH0CQ" class="thumb">
         <figure>
           <img src="knight-book.jpg" alt="Artificial Intelligence">
-          <figcaption>deprecated! (1992)</figcaption>   
+          <figcaption>An ancient textbook! (1992)</figcaption>   
         </figure>
       </a>
       <br>
