--- a/writing/books.html
+++ b/writing/books.html
@@ -21,10 +21,19 @@
   <main> 
 
     <div class="gallery thumbs">
+
       <a href="https://a.co/d/cEMLfuF" class="thumb">
         <figure>
           <img src="animales-cover.png" alt="Animales">
           <figcaption>A bilingual picture book (2024)</figcaption>   
+        </figure>
+      </a>
+      <br>
+
+      <a href="books.html" class="thumb">
+        <figure>
+          <img src="tofu-buffet-cover.png" alt="Tofu Buffet">
+          <figcaption>Comics from my alter ego (2025)</figcaption>   
         </figure>
       </a>
       <br>
