--- a/newindex.html
+++ b/newindex.html
@@ -25,7 +25,7 @@
     <a href="ai/index.html"      aria-label="AI">      <img src="button-ai.png"      alt="AI"></a>
     <a href="art/index.html"     aria-label="Art">     <img src="button-art.png"     alt="ART"></a>
     <a href="math/index.html"    aria-label="Math">    <img src="button-math.png"    alt="MATH"></a>
-    <a href="comics/index.html"  aria-label="Comics">  <img src="button-comics.png"  alt="TOFU BUFFET"></a>
+    <!--    <a href="comics/index.html"  aria-label="Comics">  <img src="button-comics.png"  alt="TOFU BUFFET"></a>   -->
     <a href="writing/index.html" aria-label="Writing"> <img src="button-writing.png" alt="WRITING"></a>
     <a href="movies/index.html"  aria-label="Movies">  <img src="button-movies.png"  alt="MOVIES TV"></a>
     <a href="index.html"         aria-label="Classic"> <img src="button-classic.png" alt="CLASSIC HOME PAGE"></a>
