--- a/likes/index.html
+++ b/likes/index.html
@@ -33,7 +33,7 @@
 <a href="https://en.wikipedia.org/wiki/Scarface_(1983_film)" class="nounderline">Scarface</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Brazil_(1985_film)" class="nounderline">Brazil</a><br><br>
 <a href="https://en.wikipedia.org/wiki/I%27m_Only_Sleeping" class="nounderline">I'm Only Sleeping by The Beatles</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Hermosa_Beach,_California" class="nounderline">Hermosa Beach Strand</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Hermosa_Beach,_California" class="nounderline">Hermosa Beach</a><br><br>
 <a href="https://en.wikipedia.org/wiki/George_Saunders" class="nounderline">George Saunders</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Blade_Runner" class="nounderline">Blade Runner (1982)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Luch_(watch)" class="nounderline">Soviet wristwatches</a><br><br>
