--- a/writing/books.html
+++ b/writing/books.html
@@ -33,15 +33,15 @@
       <a href="books.html" class="thumb">
         <figure>
           <img src="tofu-buffet-cover.png" alt="Tofu Buffet">
-          <figcaption>Comics from my alter ego (2025)</figcaption>   
+          <figcaption>Comics from my alter ego (2025)</figcaption>
         </figure>
       </a>
       <br>
 
       <a href="books.html" class="thumb">
         <figure>
-          <img src="empire-cover.jpg" alt="Empire of Liberty">
-          <figcaption>An alternate-history spy novel (2026)</figcaption>   
+          <img src="empire-cover2.jpg" alt="Empire of Liberty">
+          <figcaption>An alternate-history spy novel (2026)</figcaption>
         </figure>
       </a>
       <br>
@@ -49,7 +49,7 @@
       <a href="https://www.amazon.com/dp/0070522634?ref_=cm_sw_r_cp_ud_dp_6A00DXM4P41460PXH0CQ" class="thumb">
         <figure>
           <img src="knight-book.jpg" alt="Artificial Intelligence">
-          <figcaption>An ancient textbook! (1992)</figcaption>   
+          <figcaption>An ancient textbook (1992)</figcaption>
         </figure>
       </a>
       <br>
