--- a/movies/movies.html
+++ b/movies/movies.html
@@ -27,12 +27,11 @@
       <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake" class="thumb">
         <figure>
           <img src="utsl.png" alt="Under the Silver Lake">
+	  <figcaption>Cryptography consultant. I created ciphers for the movie. Reddit is on the <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">case</a>.</figcaption>   
         </figure>
       </a>
-	  <figcaption>Cryptography consultant. I created ciphers for the movie. <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">Reddit</a> is on the case.</figcaption>   
     </div>
 	  </center>
-
 
 
 
