--- a/movies/tv.html
+++ b/movies/tv.html
@@ -25,7 +25,7 @@
 
 
 
-
+	  <center>
     <div class="gallery thumbs">
 
       <a href="https://www.imdb.com/title/tt7784996/?ref_=nm_knf_t_3" class="thumb">
@@ -52,6 +52,7 @@
 
 
     </div>
+	  </center>
 
   </main>
 
