--- a/movies/movies.html
+++ b/movies/movies.html
@@ -23,14 +23,30 @@
   <main> 
 
 	  <center>
+
     <div class="gallery thumbs">
+
+	    <--
       <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake" class="thumb">
         <figure>
           <img src="utsl.png" alt="Under the Silver Lake">
 	  <figcaption>Cryptography consultant. I created ciphers for the movie. Reddit is on the <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">case</a>.</figcaption>   
         </figure>
       </a>
+      -->
+
+
+
+        <figure>
+      <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake" class="thumb">
+          <img src="utsl.png" alt="Under the Silver Lake">
+	  <figcaption>Cryptography consultant. I created ciphers for the movie. Reddit is on the <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">case</a>.</figcaption>   
+      </a>
+        </figure>
+
+
     </div>
+
 	  </center>
 
 
