--- a/movies/tv-old.html
+++ b/movies/tv-old.html
@@ -26,22 +26,31 @@
 
 
 	  <center>
+    <div class="gallery thumbs">
 
+        <figure>
       <a href="https://www.imdb.com/title/tt7784996/?ref_=nm_knf_t_3" class="thumb">
           <img src="zodiac.png" alt="The Hunt for the Zodiac Killer">
       </a>
-      <br> We didn't crack the infamous Z340 cipher in s1e1-5, but team member David Oranchak did it <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">three years later</a>.<br>
-        
+	  <figcaption>We didn't crack the infamous Z340 cipher in s1e1-5, but team member David Oranchak did it <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">three years later</a>.</figcaption>   
+        </figure>
+
+
+        <figure>
       <a href="https://www.imdb.com/title/tt11345432/?ref_=ttep_ep_4" class="thumb">
           <img src="wilkinson.jpg" alt="Wilkinson Cipher">
       </a>
-      <br>Incredibly, in the early years of the American Republic, the head of the Army and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.<br>
-        
+	  <figcaption>Incredibly, in the early years of the American Republic, the head of the Army and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.</figcaption>   
+        </figure>
+	  
+        <figure>
       <a href="https://www.imdb.com/title/tt6480098/?ref_=nm_knf_epp_sm_1" class="thumb">
           <img src="oak-island.jpg" alt="The Curse of Oak Island">
       </a>
-      <br>In s1e13, Nada Aldarrab and I took a look at an enciphered map.<br>
+	  <figcaption>In s1e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>
+        </figure>
 
+    </div>
 	  </center>
 
   </main>
