--- a/movies/tv.html
+++ b/movies/tv.html
@@ -32,7 +32,7 @@
       <a href="https://www.imdb.com/title/tt7784996/?ref_=nm_knf_t_3" class="thumb">
           <img src="zodiac.png" alt="The Hunt for the Zodiac Killer">
       </a>
-	  <figcaption>We didn't crack the infamous Z340 cipher in s1e1-5, but team member David Oranchak did it <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">three years later</a>.</figcaption>   
+      <figcaption>We didn't crack the infamous Z340 cipher in s1e1-5, but team member David Oranchak did it <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">three years later</a>. Reddit thinks maybe <a href="https://www.reddit.com/r/NoStupidQuestions/comments/kbxonp/could_kevin_knight_be_the_zodiac_killer">I'm the Zodiac</a>.</figcaption>   
         </figure>
 
 
