--- a/likes/index.html
+++ b/likes/index.html
@@ -152,7 +152,7 @@
 <a href="https://en.wikipedia.org/wiki/Warren_Zevon" class="nounderline">Warren Zevon</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Thomas_Jefferson" class="nounderline">Thomas Jefferson</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Rockford_Files" class="nounderline">Rockford Files</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Chiron_Beta_Prime" class="nounderline">Chiron Beta Prime (song)</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Jonathan_Coulton" class="nounderline">Chiron Beta Prime (song)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Zhuangzi_(book)" class="nounderline">The Book of Chuang-Tzu</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Frederik_Pohl" class="nounderline">Frederick Pohl</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Correction_fluid" class="nounderline">White out</a><br><br>
@@ -189,7 +189,7 @@
 <a href="https://en.wikipedia.org/wiki/Pimsleur_Language_Programs" class="nounderline">Pimsleur Language Lessons</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Santeria_(song)" class="nounderline">Santeria by Sublime</a><br><br>
 <a href="https://en.wikipedia.org/wiki/To_Live_and_Die_in_L.A._(film)" class="nounderline">To Live and Die in L.A.</a><br><br>
-<a href="https://www.yelp.com/biz/milcross-coffee-culver-city" class="nounderline">Meetings at Milcross Coffee</a><br><br>
+<a href="https://www.millcrosscoffee.com/blogs/news/millcross-team-community" class="nounderline">Meetings at Milcross Coffee</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Primer_(film)" class="nounderline">Primer</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jim_Jarmusch" class="nounderline">Jim Jarmusch</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jack_Womack" class="nounderline">Jack Womack (Ambient series)</a><br><br>
@@ -229,10 +229,10 @@
 <a href="https://en.wikipedia.org/wiki/Spider_Kiss" class="nounderline">Spider Kiss</a><br><br>
 <a href="https://en.wikipedia.org/wiki/2001:_A_Space_Odyssey_(film)" class="nounderline">2001: A Space Odyssey</a><br><br>
 <a href="https://www.goodreads.com/book/show/195791689-hum" class="nounderline">Hum</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Anthem_(Leonard_Cohen_song)" class="nounderline">Anthem by Leonard Cohen</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Leonard_Cohen" class="nounderline">Anthem by Leonard Cohen</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Player_(1992_film)" class="nounderline">The Player</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Led_Zeppelin" class="nounderline">Led Zeppelin</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Divine_Hammer" class="nounderline">Divine Hammer</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Divine_Hammer_(song)" class="nounderline">Divine Hammer</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Last_Picture_Show" class="nounderline">The Last Picture Show</a><br><br>
 <a href="https://en.wikipedia.org/wiki/A_Scanner_Darkly" class="nounderline">A Scanner Darkly</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Color_of_Money_(film)" class="nounderline">The Color of Money</a><br><br>
@@ -258,7 +258,7 @@
 <a href="https://en.wikipedia.org/wiki/Superintelligence" class="nounderline">Mathematical superintelligence</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Planet_of_the_Apes_(franchise)" class="nounderline">Planet of the Apes (original series)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Language,_Truth_and_Logic" class="nounderline">Language, Truth, and Logic</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Model_Shop" class="nounderline">The Model Shop</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Model_Shop_(film)" class="nounderline">The Model Shop</a><br><br>
 <a href="https://www.rosewoodhotels.com/en/sand-hill-menlo-park" class="nounderline">Rosewood Sand Hill</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Big_Log" class="nounderline">Big Log by Robert Plant</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Shelter_from_the_Storm" class="nounderline">Shelter from the Storm</a><br><br>
