--- a/newindex.html
+++ b/newindex.html
@@ -102,6 +102,7 @@
   "has a double tooth",
   "is laser-focused on delight",
 "this looks like a job for me",
+"forgot to pack underwear",
   "is easily amused" ];
 
   // 2) Pick one at random
