--- a/movies/articles.html
+++ b/movies/articles.html
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-	  <center> peer-reviewed articles on decipherment </center><br>
+	  <center> articles on decipherment </center><br>
     <div class="article-list">
 
 	    <!--
