--- a/movies/tv.html
+++ b/movies/tv.html
@@ -40,14 +40,14 @@
       <a href="https://www.imdb.com/title/tt11345432/?ref_=ttep_ep_4" class="thumb">
           <img src="wilkinson.jpg" alt="Wilkinson Cipher">
       </a>
-	  <figcaption>Incredibly, in the early years of the American Republic, the head of the Army and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.</figcaption>   
+      <figcaption>Incredibly, in the early years of the American Republic, the <a href="https://en.wikipedia.org/wiki/James_Wilkinson">head of the Army</a> and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.</figcaption>   
         </figure>
 	  
         <figure>
       <a href="https://www.imdb.com/title/tt6480098/?ref_=nm_knf_epp_sm_1" class="thumb">
           <img src="oak-island.jpg" alt="The Curse of Oak Island">
       </a>
-	  <figcaption>In s1e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>
+	  <figcaption>In s4e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>
         </figure>
 
     </div>
