--- a/writing/books.html
+++ b/writing/books.html
@@ -32,7 +32,7 @@
       <a href="books.html" class="thumb">
         <figure>
           <img src="tofu-buffet-cover.png" alt="Tofu Buffet">
-	  <figcaption>Comics from my <a href="https://tofu-buffet.github.io">alter ego</a> (2025)</figcaption>
+	  <figcaption>Comics from my alter ego (2025)</figcaption>
         </figure>
       </a>
 
