--- a/art/index.html
+++ b/art/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <div class="hero">
-      <img src="artist-headshot.jpg" alt="Kevin Knight" class="headshot">
+      <img src="artist-headshot-compressed.jpg" alt="Kevin Knight" class="headshot">
       <h1>Kevin Knight</h1>
     </div>
   </header>
