--- a/newindex.html
+++ b/newindex.html
@@ -59,14 +59,13 @@
  "wants to see you",
  "missed a belt loop",
  "impresses your mother",
- "grayed at seventeen",
+ "gray at seventeen",
  "no sugar, please",
  "back to the lecture at hand",
- "voted for Thalmann",
  "once put two spaces after a period",
  "might or might not",
  "is unsupervised",
- "is unprepared for the jump scare",
+ "never anticipates the jump scare",
  "are we still on the payroll?",
  "anybody seen the cat?",
  "is on the verge",
