--- a/newindex.html
+++ b/newindex.html
@@ -99,6 +99,7 @@
   "here comes your man",
   "has no problem with that",
   "has a double tooth",
+  "needs something to write on",
   "is laser-focused on delight",
 "this looks like a job for me",
 "forgot to pack underwear",
