--- a/ai/articles.html
+++ b/ai/articles.html
@@ -29,7 +29,7 @@
 
   <a href="https://kevincrawfordknight.github.io/papers/p58-knight.pdf"                                           class="article-card">Connectionist Ideas and Algorithms (1990)</a>
   <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration (1997)</a>
-  <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge (1998)</a>
+  <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistics (1998)</a>
   <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts (1999)</a>
   <a href="https://kevincrawfordknight.github.io/papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook (1999)</a>
   <a href="http://www.aclweb.org/anthology/P/P01/P01-1067.pdf"             class="article-card">A Syntax‑Based Statistical Translation Model (2001)</a (2001)>
@@ -42,7 +42,7 @@
   <a href="https://aclweb.org/anthology/D16-1159.pdf"                      class="article-card">Does String‑Based Neural MT Learn Source Syntax? (2016)</a>
   <a href="https://aclweb.org/anthology/D16-1163.pdf"                      class="article-card">Transfer Learning for Low‑Resource Neural MT (2016)</a>
   <a href="https://aclweb.org/anthology/D16-1126.pdf"                      class="article-card">Generating Topical Poetry (2016)</a>
-  <a href="http://aclweb.org/anthology/N18-1205.pdf"                       class="article-card">Recurrent Neural Networks as Weighted Language Recognizers (2018)</a>
+  <a href="http://aclweb.org/anthology/N18-1205.pdf"                       class="article-card">RNNs as Weighted Language Recognizers (2018)</a>
 
   <br>
   
