--- a/art/paintings.html
+++ b/art/paintings.html
@@ -34,7 +34,7 @@
 data-category="featured" 
 data-title="Cat Searching" 
 data-medium="oil on canvas" 
-data-size="30x30" 
+data-size="30x30in" 
 data-year="2020" 
 data-full="cat-searching-30x30.jpg">
 <img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
