--- a/likes/index.html
+++ b/likes/index.html
@@ -40,6 +40,8 @@
 <a href="https://en.wikipedia.org/wiki/Fleabag" class="nounderline">Fleabag</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Richard_Pipes" class="nounderline">Richard Pipes</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Don_DeLillo" class="nounderline">Don DeLillo</a><br><br>
+<a href="https://www.youtube.com/watch?v=bS5P_LAqiVg" class="nounderline">Kung Fury</a><br><br>
+
 <a href="https://kevincrawfordknight.github.io/pictures/lrwp2.mp4" class="nounderline">My chess robot, the Lincoln</a><br><br>
 <a href="https://en.wikipedia.org/wiki/In_the_First_Circle" class="nounderline">First Circle (Solzhenitsyn)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Boot" class="nounderline">All kindsa boots</a><br><br>
@@ -162,7 +164,7 @@
 <a href="https://en.wikipedia.org/wiki/The_Prisoner_(1967_TV_series)" class="nounderline">The Prisoner</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Timescape" class="nounderline">Timescape by Gregory Benford</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Drivin%27_on_9" class="nounderline">Drivin' on 9</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Instead_of_a_Book,_by_a_Man_Too_Busy_to_Write_One" class="nounderline">Instead of a Book</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Benjamin_Tucker" class="nounderline">Instead of a Book</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chelsea_Arts_District" class="nounderline">Chelsea NY art galleries</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Random_restart" class="nounderline">Random Restarts</a><br><br>
 <a href="https://en.wikipedia.org/wiki/William_Gibson" class="nounderline">William Gibson</a><br><br>
