--- a/newindex.html
+++ b/newindex.html
@@ -43,7 +43,7 @@
  "does whatever he wants",
  "talks in maths",
  "never finishes",
- "currently splits his time between indoors and outdoors",
+ "splits his time between indoors and outdoors",
  "can't quite remember",
  "is literally inside of a building right now",
  "wears band shirts",
@@ -76,7 +76,7 @@
  "has half a brain",
  "no time to explain",
  "is thinking of a number",
-  "is definitely ready for shots",
+  "let's do shots",
   "veni, vidi",
   "voted for the other one",
   "drives you forcibly to happiness",
@@ -89,13 +89,13 @@
   "serves the people",
   "what, me worry",
   "what day is it again",
-  "does mathematics in pen",
+  "does math in pen",
   "rat compatible",
   "thinks you're cool",
   "has this one favorite jacket",
   "let's don't and say we did",
   "can imagine quite a bit",
-  "nice place you got here, mr. pike",
+  "nice place you have here, mr. pike",
   "here comes your man",
   "has no problem with that",
   "has a double tooth",
