--- a/writing/books.html
+++ b/writing/books.html
@@ -46,7 +46,7 @@
       <a href="https://www.amazon.com/dp/0070522634?ref_=cm_sw_r_cp_ud_dp_6A00DXM4P41460PXH0CQ" class="thumb">
         <figure>
           <img src="knight-book.jpg" alt="Artificial Intelligence">
-          <figcaption>An ancient textbook (1992)</figcaption>
+          <figcaption>An ancient text (1992)</figcaption>
         </figure>
       </a>
     </div>
