--- a/likes/index.html
+++ b/likes/index.html
@@ -59,8 +59,8 @@
 <a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline">Generative news</a><br><br>
 <a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline">Tongue twisters</a><br><br>
 <a href="https://kevincrawfordknight.github.io" class="nounderline">Random unordered shit</a><br><br>
-<a href="https://kevincrawfordknight.github.io/pics-cooking-compressed" class="nounderline">Cooking</a><br><br>
-<a href="https://kevincrawfordknight.github.io/pics-ballona-compressed" class="nounderline">Ballona lagoon</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pics-cooking.html" class="nounderline">Cooking</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pics-ballona.html" class="nounderline">Ballona lagoon</a><br><br>
 
 <a href="https://en.wikipedia.org/wiki/The_Studio_(TV_series)" class="nounderline">The Studio</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
